Fix bugs with /backstage-local-tester